--- a/Sketch/Classes/Modules/Empty/EmptyView.xib
+++ b/Sketch/Classes/Modules/Empty/EmptyView.xib
@@ -29,8 +29,8 @@
                         <action selector="selectPhoto:" destination="-1" eventType="touchUpInside" id="fXz-XZ-A2p"/>
                     </connections>
                 </button>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sketch away" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dTk-Po-xsN" userLabel="Title">
-                    <rect key="frame" x="111" y="237" width="153" height="33.5"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Start sketching" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dTk-Po-xsN" userLabel="Title">
+                    <rect key="frame" x="97" y="237" width="181.5" height="33.5"/>
                     <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
